# api

./: .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  alembic.ini  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: pr-check-python.yml  release.yml
.husky/: pre-commit
alembic/: env.py
alembic/versions/inventory_item/: 1aec6638c2df_inventory_item_create.py  25f0fd2b753f_inventory_item_create.py  27a50b9ae9bb_inventory_item_create.py  458165d4765f_initial_migration.py  abff64c4ac58_initial_migration.py
alembic/versions/note/: b2798ad7c105_notes_crud.py  cb6b6e3a9138_notes_crud.py  f69ce40494e3_add_tags_to_note.py
alembic/versions/reminder/: 699aad496719_add_new_table_reminder.py  9e82bf604fea_add_new_table_reminder.py  9e82bf604fea_prueba_cambios_en_reminder.py  9fac51c807d2_changes_reminder_table.py
alembic/versions/tag/: 5f96dbbf73b9_tags_crud.py
alembic/versions/user/: 2e71bd2e425d_add_admin_user_seed.py  581d6326c67e_merge_heads.py  650fe9a83512_update_to_timestaps.py  76fc5affe2dd_user_create.py
src/: main.py
src/api/v1/inventory/application/create/: __init__.py  create_item.py  create_item_dto.py  create_item_use_case.py
src/api/v1/inventory/application/create_item/: __init__.py  create_item_use_case.py
src/api/v1/inventory/application/delete/: __init__.py  delete_item.py  delete_item_dto.py  delete_item_use_case.py
src/api/v1/inventory/application/delete_item/: __init__.py  delete_item_dto.py  delete_item_use_case.py
src/api/v1/inventory/application/update/: __init__.py  update_item.py  update_item_dto.py  update_item_use_case.py
src/api/v1/inventory/application/update_item/: __init__.py  update_item_dto.py  update_item_use_case.py
src/api/v1/inventory/application/view/: __init__.py  view_item.py  view_item_dto.py  view_item_use_case.py
src/api/v1/inventory/application/view_all/: __init__.py  view_all_item_dto.py  view_item_all_use_case.py
src/api/v1/inventory/application/view_all_items/: __init__.py  view_all_item_dto.py  view_item_all_use_case.py
src/api/v1/inventory/application/view_item/: __init__.py  view_item_dto.py  view_item_use_case.py
src/api/v1/inventory/domain/entities/: inventory.py
src/api/v1/inventory/domain/errors/: __init__.py  (+2 more)
src/api/v1/reminder/application/: __init__.py
src/api/v1/user/application/: __init__.py
src/api/v1/user/infrastructure/: migrations
(+272 files in other folders)
