[tool.poetry]
name = "synclife-api"
version = "0.0.1"
description = "FastAPI project started"
authors = ["Giuliano Poeta <giuliano.poeta.laboral@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"
fastapi = { extras = ["standard"], version = "^0.115.4" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
