[tool.poetry]
name = "synclife-api"
version = "0.0.1"
description = "FastAPI project started"
authors = ["Giuliano Poeta <giuliano.poeta.laboral@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"
fastapi = { extras = ["standard"], version = "^0.115.4" }
bcrypt = "^4.2.0"
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.10"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
zxcvbn = "^4.4.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
